--- a/public/static/css/global.css
+++ b/public/static/css/global.css
@@ -6,8 +6,8 @@ html {
 body {
     background-color: #92CDDB;
     width: 1200px;
-    max-width: 90%;
-    height: 800px;
+    min-width: 1200px;
+    height: 100%;
     min-height: 100%;
     margin: auto;
     font-size: 14pt;
