--- a/public/static/css/header.css
+++ b/public/static/css/header.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@300&display=swap');
+
+
 header {
     background-color: #ffffff;
     height: 12%;
