--- a/public/views/login.html
+++ b/public/views/login.html
@@ -6,7 +6,12 @@
         <title>Grizo's Password Manager</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/global.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/header.css') }}" />
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}" />
+        <script>
+            document.getElementById("btn-sign-in").onclick = function () {
+                location.href = "index.html";
+            };
+        </script>
     </head>
     <body>
         <header>
@@ -21,19 +26,22 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
             </ul>
-            <form action="login.html">
-                <button type="submit" id="btn-login">Log In</button>
+            <form action="index.html">
+                <button type="submit" id="btn-sign-in">Sign In</button>
             </form>
         </header>
-        <section class="main-sign-in-form">
-            <form action="">
-                <label for="txtbox-username" id="lbl-username">Master Username</label>
-                <input type="text" name="master-username" id="txtbox-username">
-                <label for="txtbox-password" id="lbl-password">Master Password</label>
-                <input type="password" name="master-password" id="txtbox-password">
-                <button id="btn-clear">Clear</button>
-                <button id="btn-sign-in">Sign In</button>
-            </form>
-        </section>
+        <main>
+            <section class="section-login-form">
+                <h1>LOG IN...</h1>
+                <form action="" class="login-form">
+                    <label for="txtbox-username" id="lbl-username">Master Username</label>
+                    <input type="text" name="master-username" id="txtbox-username">
+                    <label for="txtbox-password" id="lbl-password">Master Password</label>
+                    <input type="password" name="master-password" id="txtbox-password">
+                    <button id="btn-clear">Clear</button>
+                    <button id="btn-sign-in">Sign In</button>
+                </form>
+            </section>
+        </main>
     </body>
 </html>
