--- a/public/static/css/header.css
+++ b/public/static/css/header.css
@@ -65,13 +65,11 @@ header button {
     font-weight: bold;
     float: right;
     width: 10%;
-    height: 30%;
-    margin: 3% 2% 5% 0%;
+    height: 50%;
+    margin: 3% 2% 2% 0%;
     border-radius: 7px;
-
+    padding: 10px;
     /* background styles */
-    position: relative;
-	display: inline-block;
 	background-color: #72b7ca; /*for compatibility with older browsers*/
 	background-image: linear-gradient(#72b7ca,#aae0ee);
 }
