--- a/public/static/css/index.css
+++ b/public/static/css/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@300&display=swap');
 
+#home-link {
+    color: black;
+}
+
 main {
     width: 100%;
     height: 100%;
