--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,11 +7,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/global.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/header.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}" />
-        <script type="text/javascript">
-            document.getElementById("btn-login").onclick = function () {
-                location.href = "login.html";
-            };
-        </script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}" defer></script>
     </head>
     <body>
         <header>
@@ -20,14 +16,14 @@
                 <p>Password Manager</p>
             </section>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="/" id="home-link">Home</a></li>
+                <li><a href="/about/">About Us</a></li>
+                <li><a href="/contact/">Contact Us</a></li>
+                <li><a href="/services/">Services</a></li>
+                <li><a href="/reviews/">Reviews</a></li>
             </ul>
-            <form action="login.html">
-                <button type="submit" id="btn-login">Log In</button>
+            <form action="/login/">
+                <button type="button" id="btn-login">Log In</button>
             </form>
         </header>
         <main class="main-content-grid">
