--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,11 +7,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/global.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/header.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}" />
-        <script>
-            document.getElementById("btn-sign-in").onclick = function () {
-                location.href = "index.html";
-            };
-        </script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/login.js') }}" defer></script>
     </head>
     <body>
         <header>
@@ -20,26 +16,30 @@
                 <p>Password Manager</p>
             </section>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about/">About Us</a></li>
+                <li><a href="/contact/">Contact Us</a></li>
+                <li><a href="/services/">Services</a></li>
+                <li><a href="/reviews/">Reviews</a></li>
             </ul>
-            <form action="index.html">
-                <button type="submit" id="btn-sign-in">Sign In</button>
+            <form action="/">
+                <button type="button" id="btn-sign-in">Sign In</button>
             </form>
         </header>
         <main>
             <section class="section-login-form">
                 <h1>LOG IN...</h1>
-                <form action="" class="login-form">
+                <form action="" class="log-in-form" method="POST">
                     <label for="txtbox-username" id="lbl-username">Master Username</label>
                     <input type="text" name="master-username" id="txtbox-username">
                     <label for="txtbox-password" id="lbl-password">Master Password</label>
                     <input type="password" name="master-password" id="txtbox-password">
-                    <button id="btn-clear">Clear</button>
-                    <button id="btn-sign-in">Sign In</button>
+                    <div id="div-remember-me">
+                        <input type="checkbox" name="remember-me" id="ckbox-remember-me" value="Remember">
+                        <label for="ckbox-remember-me" id="lbl-remember-me">Remember me...</label>
+                    </div>
+                    <button type="reset" id="btn-clear">Clear</button>
+                    <button type="submit" id="btn-log-in">Log In</button>
                 </form>
             </section>
         </main>
