Fixed user account dropdown.

--- a/public/views/user-records.html
+++ b/public/views/user-records.html
@@ -21,8 +21,11 @@
                 <li><a href="/">Services</a></li>
             </ul>
             <div class="dropdown">
-                <button class="btn-dropdown-menu">AMP7320</button>
-                <div class="dropdown-content">
+                <div id="dropdown-icon">
+                    <span class="arrow down"></span>
+                </div>
+                <button id="btn-dropdown-menu"><span>AMP7320</span></button>
+                <div id="dropdown-content">
                     <button type="button" id="btn-account-settings">Account Settings</button>
                     <button type="button" id="btn-log-out">Log Out</button>
                 </div>
