--- a/public/static/css/user-records.css
+++ b/public/static/css/user-records.css
@@ -6,9 +6,11 @@ header button {
     margin: 1% 0%;
 }
 
-.btn-dropdown-menu {
+#btn-dropdown-menu {
     cursor: pointer;
     width: 100%;
+    position: relative;
+    top: -15px;
 }
 
 .dropdown {
@@ -19,8 +21,9 @@ header button {
     padding: 0%;
 }
 
-.dropdown-content {
+#dropdown-content {
     position: relative;
+    top: -15px;
     background-color: black;
     width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -28,16 +31,48 @@ header button {
     padding: 0%;
 }
 
-.dropdown-content button {
+#dropdown-content button {
     color: black;
     display: block;
     width: 100%;
 }
 
-.dropdown:hover .dropdown-content {
+/* .dropdown:hover .dropdown-content {
+    display: block;
+} */
+
+#btn-dropdown-menu:active .dropdown-content{
     display: block;
 }
 
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
+
+.arrow {
+    position: relative;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    padding: 0%;
+    width: 20px;
+    height: 20px;
+    display: block;
+    margin: auto;
+  }
+
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+
+  #dropdown-icon {
+    position: relative;
+    left: -50px;
+    top: 30px;
+    border: grey solid 5px;
+    background-color: lightgray;
+    width: 45px;
+    height: 40px;
+    box-sizing:border-box;
+  }
+
+  #dropdown-icon:hover {
+      background-color: lightslategray;
+  }
