--- a/public/static/css/global.css
+++ b/public/static/css/global.css
@@ -11,5 +11,6 @@ body {
     min-height: 100%;
     margin: auto;
     font-size: 14pt;
-    box-shadow: 0px 0px 20px 10px #72b7ca;
+    box-shadow: 0px 0px 10px #2d5763;
+    overflow: hidden;
 }
