--- a/public/static/css/index.css
+++ b/public/static/css/index.css
@@ -44,7 +44,7 @@ main {
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     font-style: italic;
     border: solid 10px rgba(white, .2);
-    box-shadow: 0px 0px 20px 10px rgb(235, 232, 232);
+    box-shadow: 0px 0px 15px black;
 }
 
 .sign-in-form {
