--- a/public/static/css/user-records.css
+++ b/public/static/css/user-records.css
@@ -2,77 +2,55 @@
     color: black;
 }
 
-header button {
-    margin: 1% 0%;
+main {
+    width: 90%;
+    height: 100%;
+    margin: 50px auto 50px auto;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px black;
+    border-style: none;
 }
 
-#btn-dropdown-menu {
-    cursor: pointer;
-    width: 100%;
+h1 {
+    margin: 5% 5% 0% 5%;
+    font-weight: bold;
+    font-style: normal;
+    letter-spacing: 5px;
+    font-size: 48pt;
+    color: #4ea9c2;
+    font-family: 'Saira Semi Condensed', sans-serif
+}
+
+form {
+    /* border: red 1px solid; */
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+form input#txt-search-bar {
+    height: 35px;
+    width: 25%;
+    border-radius: 25px;
+    font-size: 12pt;
+    height: 35px;
+    padding: 0px 35px 0px 15px;
+    margin: 1%;
+}
+
+input:focus {
+    outline: none;
+}
+
+form label {
+    height: 35px;
+    font-size: 20pt;
+    margin: 5% 1% 0% 5%;
+    color: #2892af;
+}
+
+#img-search-icon {
+    width: 32px;
     position: relative;
-    top: -15px;
+    left: -56px;
+    top: 12px;;
 }
-
-.dropdown {
-    float: right;
-    margin: 3% 2% 2% 0%;
-    display: inline-block;
-    width: 15%;
-    padding: 0%;
-}
-
-#dropdown-content {
-    position: relative;
-    top: -15px;
-    background-color: black;
-    width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    display: none;
-    padding: 0%;
-}
-
-#dropdown-content button {
-    color: black;
-    display: block;
-    width: 100%;
-}
-
-/* .dropdown:hover .dropdown-content {
-    display: block;
-} */
-
-#btn-dropdown-menu:active .dropdown-content{
-    display: block;
-}
-
-
-.arrow {
-    position: relative;
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    padding: 0%;
-    width: 20px;
-    height: 20px;
-    display: block;
-    margin: auto;
-  }
-
-  .down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-  }
-
-  #dropdown-icon {
-    position: relative;
-    left: -50px;
-    top: 30px;
-    border: grey solid 5px;
-    background-color: lightgray;
-    width: 45px;
-    height: 40px;
-    box-sizing:border-box;
-  }
-
-  #dropdown-icon:hover {
-      background-color: lightslategray;
-  }
