--- a/public/views/user-records.html
+++ b/public/views/user-records.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Grizo's Password Manager</title>
         <link rel="stylesheet" type="text/css" href="../static/css/global.css" />
-        <link rel="stylesheet" type="text/css" href="../static/css/header.css" />
+        <link rel="stylesheet" type="text/css" href="../static/css/user-header.css" />
         <link rel="stylesheet" type="text/css" href="../static/css/user-records.css" />
         <script type="text/javascript" src="../static/js/user-records.js" defer></script>
     </head>
@@ -32,7 +32,14 @@
             </div>
         </header>
         <main>
-           
+           <h1>Records</h1>
+           <section>
+               <form action="">
+                   <label for="txt-search-bar">Search</label>
+                   <input type="text" id="txt-search-bar" placeholder="Type record ID or URL here...">
+                   <input type="image" src="../static/images/search-icon.svg" id="img-search-icon" name="submit" alt="Submit search query">
+               </form>
+           </section>
         </main>
     </body>
 </html>
