Added table to records page.

--- a/public/views/user-records.html
+++ b/public/views/user-records.html
@@ -40,6 +40,37 @@
                    <input type="image" src="../static/images/search-icon.svg" id="img-search-icon" name="submit" alt="Submit search query">
                </form>
            </section>
+           <div class="table">
+                <div class="tr">
+                    <span class="th">Record ID</span>
+                    <span class="th">Domain URL</span>
+                    <span class="th">Username</span>
+                    <span class="th">Password</span>
+                    <span class="th">Actions</span>
+                </div>
+                <form action="" class="tr" method="POST">
+                    <span class="td record-id"><input type="text" class="table-input"></span>
+                    <span class="td domain-url"><input type="text" class="table-input"></span>
+                    <span class="td username"><input type="text" class="table-input"></span>
+                    <span class="td password"><input type="text" class="table-input"></span>
+                    <div class="td">
+                        <input type="image" src="../static/images/view-record-icon.svg" class="action-icon" name="submit" alt="Submit search query">
+                        <input type="image" src="../static/images/edit-record-icon.svg" class="action-icon" name="submit" alt="Submit search query">
+                        <input type="image" src="../static/images/delete-record-icon.svg" class="action-icon" name="submit" alt="Submit search query">
+                    </div>
+                </form>
+                <form action="" class="tr" method="POST">
+                    <span class="td record-id"><input type="text" class="table-input"></span>
+                    <span class="td"><input type="text" class="table-input"></span>
+                    <span class="td"><input type="text" class="table-input"></span>
+                    <span class="td"><input type="text" class="table-input"></span>
+                    <div class="td">
+                        <input type="image" src="../static/images/view-record-icon.svg" class="action-icon" name="submit" alt="Submit search query">
+                        <input type="image" src="../static/images/edit-record-icon.svg" class="action-icon" name="submit" alt="Submit search query">
+                        <input type="image" src="../static/images/delete-record-icon.svg" class="action-icon" name="submit" alt="Submit search query">
+                    </div>
+                </form>
+           </div>
         </main>
     </body>
 </html>
