--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,8 +7,15 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/global.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/header.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}" />
+        <script src="../static/js/login.js"></script>
+
         <script type="text/javascript" src="{{ url_for('static', filename='js/login.js') }}" defer></script>
     </head>
+    <script>
+        window.onload= (function() {
+            document.getElementById('btn-log-in').addEventListener("click", login);
+        })
+    </script>
     <body>
         <header>
             <section class="banner-logo">
