--- a/public/views/user-records.html
+++ b/public/views/user-records.html
@@ -11,7 +11,9 @@
     </head>
     <script>
         window.onload= (function(){
-            displayData();
+            
+            token()            
+            
         })
     </script>
     <body>
@@ -47,14 +49,14 @@
            </section>
            <div class="table" id="inputTable">
                 <div class="tr">
-                    <span class="th">Record ID</span>
+                    <!-- <span class="th">Record ID</span> -->
                     <span class="th">Domain URL</span>
                     <span class="th">Username</span>
                     <span class="th">Password</span>
                     <span class="th">Actions</span>
                 </div>
                 <form action="" class="tr" method="POST"id= "userDataField">
-                    <span class="td record-id"><input type="text" class="table-input"></span>
+                    <!-- <span class="td record-id"><input type="text" class="table-input"></span> -->
                     <span class="td domain-url"><input type="text" placeholder="" class="table-input"></span>
                     <span class="td username"><input type="text" placeholder="" class="table-input"></span>
                     <span class="td password"><input type="text" placeholder="" class="table-input"></span>
